--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 replication/data/clean/* filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.geojson filter=lfs diff=lfs merge=lfs -text
